--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.techgamelife.daiseirei">
    <application
-        android:label="daiseirei"
+        android:label="大妖精の部屋"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
